some refinement, remove caps from pkgname, use caps in desktop file

--- a/forkboard.desktop
+++ b/forkboard.desktop
@@ -2,9 +2,9 @@
 Name=ForkBoard
 GenericName=CryptoCurrency
 Comment=An ElectronJS Dashboard App to show wallets balances from Chia and Forks in one convenient location.
-Exec=ForkBoard
+Exec=forkboard
 Terminal=false
 Type=Application
-Icon=ForkBoard
+Icon=forkboard
 Categories=Utility;
-StartupWMClass=ForkBoard
+StartupWMClass=forkboard
